implment multi language support

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,60 +3,51 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_tw"
-        android:icon="@drawable/ic_language_switch"
-        android:title="zh-tw -正體中文"
+        android:title="正體中文"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/action_cn"
-        android:icon="@drawable/ic_language_switch"
-        android:title=" zh-cn -簡體中文"
+        android:title="zh-cn"
         app:showAsAction="never" />
 
 
     <item
         android:id="@+id/action_en"
-        android:icon="@drawable/ic_language_switch"
-        android:title="en -英文"
+        android:title="English"
         app:showAsAction="never" />
 
 
     <item
         android:id="@+id/action_ja"
-        android:icon="@drawable/ic_language_switch"
-        android:title="ja -日文"
+        android:title="ja"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/action_ko"
-        android:icon="@drawable/ic_language_switch"
-        android:title="ko -韓文"
+        android:title="ko"
         app:showAsAction="never" />
 
 
     <item
         android:id="@+id/action_es"
-        android:icon="@drawable/ic_language_switch"
-        android:title="es -西班牙文"
+        android:title="es"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/action_id"
-        android:icon="@drawable/ic_language_switch"
-        android:title=" id -印尼文"
+        android:title=" id"
         app:showAsAction="never" />
 
 
     <item
         android:id="@+id/action_th"
-        android:icon="@drawable/ic_language_switch"
-        android:title="th -泰文"
+        android:title="th"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/action_vi"
-        android:icon="@drawable/ic_language_switch"
-        android:title="vi -越南文"
+        android:title="vi"
         app:showAsAction="never" />
 
 
