--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_navigation"
-    app:startDestination="@id/fr_home"
-    >
+    app:startDestination="@id/fr_home">
     <fragment
         android:id="@+id/fr_detail"
         android:name="com.example.attractions.fragment.detail.DetailFragment"
@@ -12,6 +11,14 @@
         <action
             android:id="@+id/act_detail_home"
             app:destination="@+id/fr_home"></action>
+        <action
+            android:id="@+id/act_detail_webview"
+            app:destination="@+id/fr_webview">
+            <argument
+                android:name="weburl"
+                android:defaultValue=""
+                app:argType="string"></argument>
+        </action>
     </fragment>
     <fragment
         android:id="@+id/fr_home"
@@ -19,7 +26,18 @@
         tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/act_home_detail"
-            app:destination="@+id/fr_detail"></action>
+            app:destination="@+id/fr_detail">
+
+            <argument
+                android:name="attractionplace"
+                android:defaultValue="@null"
+                app:argType="com.example.data.entity.AttractionPlace"
+                app:nullable="true" />
+        </action>
     </fragment>
+    <fragment
+        android:id="@+id/fr_webview"
+        android:name="com.example.attractions.fragment.webview.WebviewFragment"
+        tools:layout="@layout/fragment_webview" />
 
 </navigation>
