--- a/app/src/main/res/layout/custom_attraction_view.xml
+++ b/app/src/main/res/layout/custom_attraction_view.xml
@@ -5,10 +5,11 @@
     android:layout_height="wrap_content">
 
     <ImageView
+
         android:id="@+id/iv_avatar"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:src="@drawable/ic_language_switch"
+        android:src="@drawable/img_placeholder"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,7 +23,7 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
         app:layout_constraintLeft_toRightOf="@+id/iv_avatar"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/iv_right"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -45,6 +46,17 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     </LinearLayout>
+
+    <ImageView
+        android:layout_margin="20dp"
+        android:id="@+id/iv_right"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:src="@drawable/ic_right"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:layout_width="match_parent"
